# PerSSim

./: .gitignore  AGENT.md  README.md
.github/agents/: character-bundler.agent.md  character-compiler-narrative.agent.md  character-compiler-strict.agent.md  character-configurator.agent.md  character-v1.agent.md
.github/agents/pen-pal/: pen-pal.agent.md
.github/skills/dialogo-humano/: SKILL.md
PerSSim/: design.md
interact/: .gitignore  README.md  pyproject.toml
interact/config/: char.example.config.json  char.example.json  session.example.config.json  session.example.json
interact/docs/: design.md  install.md  usage.md
interact/persim/: char.py  launcher.py  models.py  ollama_client.py  orchestrator.py  tui.py
interact/perssim/: __init__.py  char.py  launcher.py  ollama_client.py  ollama_debug.py  orchestrator.py
interact/sessions/test-session-001/: session.config.json
interact/sessions/test-session-001/bundles/: Bundle_Mazarin.md  Bundle_Richelieu.md
interact/sessions/test-session-001/chars/: mazarin.config.json  richelieu.config.json
interact/tests/: test_char_turns.py  test_orchestrator_turns.py
interact/tests/session_test/: mazarin.config.json  richelieu.config.json  session.config.json  session.json
simulation/: README.md
simulation/v1/: SYSTEM_PROMPT.md
simulation/v1.1/Model/: IMPLEMENTATION.md
v1/: README.md  SYSTEM_PROMPT.md
v1.1/: SYSTEM_PROMPT.md
v1.1/Impl/001/: Behavior.json  Memory.json  SYSTEM_PROMPT.md
v1.1/Model/: README.md
v1.1/Model/Template/: Behavior.json  Identity.json  Profile.json  SYSTEM_PROMPT.md
v1/Impl/001/: Behavior.json  Bundle.md  Memory.json  SYSTEM_PROMPT.md  Values.json
v1/Model/: IMPLEMENTATION.md
v1/Model/Template/: Behavior.json  Identity.json  Memory.json  Profile.json  SYSTEM_PROMPT.md  Values.json
v1/Template/: Memory.json  SYSTEM_PROMPT.md  Values.json
(+141 files in other folders)
