[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persim-interact"
version = "0.1.0"
description = "PerSSim – Sistema de interacción multi-agente con personalidades históricas"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
persim-launch = "persim.launcher:main"
persim-char   = "persim.char:main"
persim-orch   = "persim.orchestrator:main"

[tool.hatch.build.targets.wheel]
packages = ["persim"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v"

[tool.pytest.ini_options]
asyncio_mode = "auto"
